<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_publish"
        android:name="com.unprg.alquilafacil.ui.main.publish.PublishFragment"
        android:label="@string/title_publicar"
        tools:layout="@layout/fragment_publish" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.unprg.alquilafacil.ui.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_myads"
        android:name="com.unprg.alquilafacil.ui.main.myads.MyAdsFragment"
        android:label="@string/title_anuncios"
        tools:layout="@layout/fragment_myads" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>