<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity"
    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
    android:layout_marginVertical="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/text01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/names"
        android:paddingBottom="@dimen/space_tv_with_edt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:background="@drawable/esquinas_redondeadas"
        android:padding="@dimen/space_edt"
        app:layout_constraintTop_toBottomOf="@id/text01"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/text02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastnames"
        android:layout_marginTop="@dimen/space_edt"
        android:paddingBottom="@dimen/space_tv_with_edt"
        app:layout_constraintTop_toBottomOf="@id/edt_name"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edt_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:background="@drawable/esquinas_redondeadas"
        android:padding="@dimen/space_edt"
        app:layout_constraintTop_toBottomOf="@id/text02"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/text03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_marginTop="@dimen/space_edt"
        android:paddingBottom="@dimen/space_tv_with_edt"
        app:layout_constraintTop_toBottomOf="@id/edt_lastname"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:background="@drawable/esquinas_redondeadas"
        android:padding="@dimen/space_edt"
        app:layout_constraintTop_toBottomOf="@id/text03"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/text04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="@dimen/space_edt"
        android:paddingBottom="@dimen/space_tv_with_edt"
        app:layout_constraintTop_toBottomOf="@id/edt_phone"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:background="@drawable/esquinas_redondeadas"
        android:padding="@dimen/space_edt"
        app:layout_constraintTop_toBottomOf="@id/text04"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/text05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="@dimen/space_edt"
        android:paddingBottom="@dimen/space_tv_with_edt"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:background="@drawable/esquinas_redondeadas"
        android:padding="@dimen/space_edt"
        app:layout_constraintTop_toBottomOf="@id/text05"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/colorAccent"
        android:layout_marginTop="@dimen/space_btn_long"
        android:paddingVertical="@dimen/space_btn_small"
        android:paddingHorizontal="@dimen/space_btn_long"
        app:layout_constraintTop_toBottomOf="@id/edt_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>